fix replay when not looping, alt color visibility
clicking the play button stopped replaying from beginning if you reached the end of the song with looping off
also alt color invisible by default when it should be visible

--- a/client/style.css
+++ b/client/style.css
@@ -610,7 +610,8 @@ input[type=button] {
     pointer-events: none;
 }
 #volume {
-    appearance: slider-vertical;
+    writing-mode: vertical-rl;
+    direction: rtl;
     position: absolute;
     top: 0px;
     left: 0px;
